tests/struct_field_group_default_bad.stderr
tests/struct_field_group_default_bad.hop:3:14: error: HOP1004: unexpected token
