tests/struct_field_group_default_bad.hop
// Verifies struct field group default is rejected.
struct S {
    x, y i32 = 1
}

fn main() {}
